Fixing button vertical align

--- a/src/styles/components/button.less
+++ b/src/styles/components/button.less
@@ -65,15 +65,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 0;
+    margin-top: -2px;
 
     .icon {
       margin-right: 10px;
       color: var(--primary);
     }
-  }
-
-  > .btn-label {
-    margin-top: -2px;
   }
 }
